Overflow hidden fix

--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@
 }
 
 html {
+  max-width: 100%;
   overflow-x: hidden;
 }
 
